# Metrics-Calculator

./: .gitignore  README.md  main.py  matrix_operations.py  pyproject.toml  requirements.txt  test.py  ui.py  verify.py
src/matrix_calculator/: __init__.py  __main__.py  cli.py  entrypoint.py  matrix_operations.py  ui.py
tests/: test_matrix_operations.py
