[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-calculator"
version = "0.1.0"
description = "Educational matrix calculator (CLI + Tkinter UI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Educational" }
authors = [{ name = "Matrix Calculator" }]

dependencies = []

[project.optional-dependencies]
ui = ["numpy>=1.26"]

[project.scripts]
matrix-calculator = "matrix_calculator.entrypoint:entrypoint"
matrix-calculator-cli = "matrix_calculator.cli:run_cli"
matrix-calculator-ui = "matrix_calculator.ui:run_ui"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
